Finish Alpha build

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="loginDark">#47525E</color>
     <color name="white">#FFFFFF</color>
     <color name="myGreen">#13CE66</color>
+    <color name="red">#FF0000</color>
 </resources>
