--- a/app/src/main/res/layout/activity_my_project_main.xml
+++ b/app/src/main/res/layout/activity_my_project_main.xml
@@ -23,16 +23,17 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="150dp"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="36dp"
         android:text="@string/my_project"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        app:layout_constraintBottom_toTopOf="@+id/delete_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_bar_view" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:onClick="addProject"
+        android:id="@+id/add_bi"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginBottom="12dp"
@@ -52,19 +53,19 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="56dp"
         android:layout_marginEnd="150dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="5dp"
         android:text="@string/add_project"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/projects_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/delete_button" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/projects_view"
         android:layout_width="395dp"
         android:layout_height="366dp"
         android:layout_marginEnd="8dp"
@@ -74,6 +75,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/delete_button" />
 
 </android.support.constraint.ConstraintLayout>
